--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : ""
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/myself.jpg"
+  avatar           : "myself.jpg"
   name             : "Emilio Recart"
   pronouns         : # example: "she/her"  
   bio              : "Psychologist Specialized in Data Science Applied to Behavioral and Psychological problems"
