--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Emilio Recart"
   pronouns         : # example: "she/her"  
   bio              : "Psychologist Specialized in Data Science Applied to Behavioral and Psychological problems"
-  location         : "Earth"
+  location         : "Buenos Aires, Argentina"
   employer         : "University of Buenos Aires"
   uri              : # URL
   email            : "recart.emilioz@gmail.com" 
@@ -37,7 +37,7 @@ author:
   orcid            : "https://orcid.org/0000-0001-5210-3894"
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Emilio-Recart"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
