--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,14 @@
 # main links links
 main:
+
+  - title: "Research"
+    url: /_research/
+
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+#    url: /talks/    
 
   - title: "Assistant Lecture"
     url: /teaching/    
