--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,9 +13,12 @@ main:
 
   - title: "Assistant Lecture"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
+  
+  - title: "Work Experience"
+    url: /work_experience/
+
+#  - title: "Portfolio"
+#    url: /portfolio/
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
