Actualización de nuevos CV

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,12 +24,7 @@ main:
 #    url: /year-archive/
     
   - title: "Resume"
-    dropdown: true
-    links:
-      - title: "Resume (English)"
-        url: /files/Recart_Emilio_ENG.pdf
-      - title: "CV (Español)"
-        url: /files/Recart_Emilio_ESP.pdf
+    url: /resume/
 
     
  # - title: "Guide"
